# simba_parser

./: CMakeLists.txt
src/: CMakeLists.txt  json_serializer.cpp  json_serializer.h  main.cpp
src/pcap/: file_reader.cpp  file_reader.h
src/proto/: ethernet.cpp  ethernet.h  ipv4.cpp  ipv4.h  packet.h  packet_parser.h  pcap.h  simba.cpp  simba.h  udp.cpp  udp.h
ut/: CMakeLists.txt  utils.h
ut/proto/: ethernet.cpp  ipv4.cpp  simba.cpp  udp.cpp
